# job-poster

./: .dockerignore  .eslintrc.json  .gitignore  Dockerfile.dev  PUSH_COMMAND.txt  QWEN.md  README.md  TODO_GRPC.md  docker-compose.dev-services.yml  docker-compose.dev.yml  docker-compose.fixed.yml  docker-compose.yml  git_setup_commands.txt  package.json  tsconfig.json
.github/workflows/: ci-cd.yml
.qwen/: settings.json
apps/api-gateway/: Dockerfile  package.json  tsconfig.json
apps/api-gateway/src/: index.js  index.ts
apps/auth-service/: Dockerfile  package.json  tsconfig.json
apps/auth-service/src/: index.js  index.ts
apps/auth-service/tests/: auth-service-unit.test.ts  auth.test.js  auth.test.ts  signup.test.ts
apps/frontend/: Dockerfile  jest.config.js  jest.setup.js  package.json  tsconfig.json
apps/frontend/types/: test-env.d.ts
apps/job-discovery-service/: Dockerfile  jest.config.js  package.json
apps/job-discovery-service/src/: index.js  index.ts
apps/job-discovery-service/tests/: job-discovery.test.js  job-discovery.test.ts
apps/user-service/: Dockerfile  package.json  tsconfig.json
apps/user-service/src/: index.js  (+1 more)
automation-worker/: Dockerfile  package.json
automation-worker/src/: apply.ts
backend/: Cargo.toml  Dockerfile
backend/src/: db.rs  handlers.rs  main.rs  models.rs  schema.rs
docker/compose/: docker-compose.yml
docs/: api-documentation.md  architecture.md  contribution-guide.md  deployment-guide.md  development-guide.md  index.md
nlp-service/: app.py
worker/: Cargo.toml  Dockerfile
worker/src/: main.rs
(+48 files in other folders)
