
[package]
name = "ai_job_applier_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-multipart = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "uuidv07", "chrono"] }
r2d2 = "0.8"
uuid = { version = "1", features = ["v4","serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["json", "multipart", "rustls-tls"] }
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
redis = { version = "0.23", features = ["tokio-comp"] }
