
[package]
name = "apply_worker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.23", features = ["tokio-comp"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-0_8"] }
uuid = { version = "1", features = ["v4","serde"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
